# ComfyUI-Y7Nodes

./: ._Y7PhotoPrompter.py  .___init__.py  .gitignore  01_color_mode.json  LICENSE  README.md  TODO.txt  Y7ArtStylePrompter.py  Y7Nodes.py  Y7PhotoPrompter.py  Y7TokenCounter.py  __init__.py  config.json  pyproject.toml  requirements.txt  versions.txt
data/: ._00_color_mode.json  ._01_framing.json  ._02_style_type.json  ._03_subject_class.json  ._05_clothing_color.json  ._06_clothing_top.json  ._07_clothing_lower.json  ._08_footwear.json  ._09_accessories.json  ._10_primary_action.json  ._11_gaze.json  ._12_hands.json  ._13_location.json  ._13_location_interior.json  ._14_location_exterior.json  ._14_time_of_day.json  ._15_weather.json  ._16_additional_details.json  ._16_weather.json  00_color_mode.json  01_color_mode.json  01_framing.json  01_style_and_framing.json  02_style_type.json  02_technique.json  03_subject_class.json  03_subject_style.json  04_hairstyle.json  05_clothing_color.json  06_clothing_top.json  07_clothing_lower.json  08_footwear.json  09_accessories.json  10_primary_action.json  11_gaze.json  13_location.json  13_location_interior.json  13b_location_interior.json  14_location_exterior.json  14_time_of_day.json  (+16 more)
data/custom/: clothing_top.json
example_workflows/: ._image_stitcher_workflow1.json  image_stitcher_workflow1.json  lm_studio_nodes_workflow.json  paste_cropped_image_back.json  prompt_enhancer_flux2_with_catch_edit_text.json  show_anything_node.json
examples/: photo_prompter_workflow.json  token-count-workflow.json
lms_config/: models.txt
nodes/: aspect_ratio_picker.py  brightness.py  caption_tools.py  catch_edit_text_dual.py  clip_token_count.py  color_match_masked.py  crop_to_nearest_multiple.py  crop_to_resolution.py  custom_dimensions_example.json  documentation.py  example_system_messages.py  grid2batch.py  image_row.py  image_size_aspect_ratio.py  image_size_presets.py  image_stitcher.py  jc_data.json  joycaption.py  lm_studio.py  load_image.py  paste_cropped_image_back.py  prompt_enhancer_flux copy.py~~  prompt_enhancer_flux.py  prompt_enhancer_flux.py~~  prompt_enhancer_flux2_klein.py  prompt_enhancer_flux_stream.py  qwen3-8b_demo.py  qwen3_vl.py  qwen_vl.py  sampler_select_name.py  save_image.py  scale_image_by.py  scale_image_to_total_pixels.py  show_anything.py  smolvlm.py  system_messages_example.py  t5_token_count.py  template_node.py  text.py
prompt_instructions/: example_prompt_instruction_flux2_klein.txt
utils/: colored_print.py  logger.py
workflows/: prompt_enhancer.json  prompt_enhancer_test.json  prompt_enhancer_with_catch_edit_text.json  show_anything_node.json  t5_clip_tokenizer_workflow.json  t5_tokenizer_workflow.json
(+43 files in other folders)
