[project]
name = "comfyui-y7nodes"
description = "Various utility nodes for ComfyUI. Some will be be modified versions of other existing custom nodes."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "transformers", "protobuf", "sentencepiece", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/yushan777/ComfyUI-Y7Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Yushan777"
DisplayName = "ComfyUI-Y7Nodes"
Icon = ""
