[project]
name = "comfyui-y7nodes"
description = "A collection of utility, quality-of-life nodes for ComfyUI. Probably only useful to me."
version = "1.0.27"
license = {file = "LICENSE"}
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch", "transformers>=4.49.0", "protobuf>=4.25.6", "sentencepiece>=0.2.0", "huggingface_hub>=0.29.0", "accelerate>=0.26.0", "pillow>=10.0.0"]

[project.urls]
Repository = "https://github.com/yushan777/ComfyUI-Y7Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Comfy-Org/ComfyUI/wiki"
"Bug Tracker" = "https://github.com/Comfy-Org/ComfyUI/issues"

[tool.comfy]
PublisherId = "yushan777"
DisplayName = "ComfyUI-Y7Nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

